# minisat

./: .gitignore  Makefile  meson.build
.github/workflows/: build.yml
minisat/capi/: cminisat.cc  cminisat.h
minisat/core/: Dimacs.h  Main.cc  Solver.cc  Solver.h
minisat/simp/: Main.cc
minisat/utils/: ParseUtils.h
